syntax = "proto3";

package api.dict;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "model.proto";
import "base.proto";

option go_package = "prometheus-manager/api/dict;dict";
option java_multiple_files = true;
option java_package = "api.dict";


// Dict 字典管理模块
service Dict {
	// CreateDict 创建字典
	rpc CreateDict (CreateDictRequest) returns (CreateDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/create"
			body: "*"
		};
	}

	// UpdateDict 更新字典
	rpc UpdateDict (UpdateDictRequest) returns (UpdateDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/update/{id}"
			body: "*"
		};
	}

	// BatchUpdateDictStatus 更新字典状态
	rpc BatchUpdateDictStatus (BatchUpdateDictStatusRequest) returns (BatchUpdateDictStatusReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/status/update/batch"
			body: "*"
		};
	}

	// DeleteDict 删除字典
	rpc DeleteDict (DeleteDictRequest) returns (DeleteDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/delete/{id}"
			body: "*"
		};
	}

	// BatchDeleteDict 删除字典列表
	rpc BatchDeleteDict (BatchDeleteDictRequest) returns (BatchDeleteDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/batch/delete"
			body: "*"
		};
	}

	// GetDict 获取字典
	rpc GetDict (GetDictRequest) returns (GetDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/get/{id}"
			body: "*"
		};
	}

	// ListDict 获取字典列表
	rpc ListDict (ListDictRequest) returns (ListDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/list"
			body: "*"
		};
	}

	// SelectDict 获取字典列表, 用于下拉选择
	rpc SelectDict (SelectDictRequest) returns (SelectDictReply) {
		option (google.api.http) = {
			post: "/api/v1/dict/select"
			body: "*"
		};
	}
}

// CreateDictRequest 创建字典请求
message CreateDictRequest {
	string name = 2;
	Category category = 3;
	string color = 4;
	string remark = 6;
}
// CreateDictReply 创建字典响应
message CreateDictReply {
	// id 创建成功后的字典ID
	uint32 id = 1;
}

// UpdateDictRequest 更新字典请求
message UpdateDictRequest {
	// id 需要更新的字典ID
	uint32 id = 1 [(validate.rules).uint32.gt = 0];
	// name 字典名称
	string name = 2 [(validate.rules).string = {min_len: 1, max_len: 20}];
	// category 字典分类
	Category category = 3 [(validate.rules).enum = {defined_only: true, not_in: [0]}];
	// color 字典颜色
	string color = 4 [(validate.rules).string = {max_len: 10}];
	// remark 字典备注
	string remark = 6 [(validate.rules).string = {max_len: 255}];
}
// UpdateDictReply 更新字典响应
message UpdateDictReply {
	// id 更新成功后的字典ID
	uint32 id = 1;
}

// BatchUpdateDictStatusRequest 更新字典状态请求
message BatchUpdateDictStatusRequest {
	// ids 需要更新的字典ID列表
	repeated uint32 ids = 1 [(validate.rules).repeated.min_items = 1, (validate.rules).repeated.unique = true];
	// status 字典状态
	Status status = 2 [(validate.rules).enum = {defined_only: true, not_in: [0]}];
}
// BatchUpdateDictStatusReply 更新字典状态响应
message BatchUpdateDictStatusReply {
	// ids 更新成功后的字典ID列表
	repeated uint32 ids = 1;
}

// DeleteDictRequest 删除字典请求
message DeleteDictRequest {
	// id 需要删除的字典ID
	uint32 id = 1 [(validate.rules).uint32.gt = 0];
}
// DeleteDictReply 删除字典响应
message DeleteDictReply {
	// id 删除成功后的字典ID
	uint32 id = 1;
}

// BatchDeleteDictRequest 删除字典列表请求
message BatchDeleteDictRequest {
	// ids 需要删除的字典ID列表
	repeated uint32 ids = 1 [(validate.rules).repeated.min_items = 1, (validate.rules).repeated.unique = true];
}
// BatchDeleteDictReply 删除字典列表响应
message BatchDeleteDictReply {
	// ids 删除成功后的字典ID列表
	repeated uint32 ids = 1;
}

// GetDictRequest 获取字典请求
message GetDictRequest {
	// id 需要获取的字典ID
	uint32 id = 1 [(validate.rules).uint32.gt = 0];
	// isDeleted 是否获取已删除的字典
	bool isDeleted = 2;
}
// GetDictReply 获取字典响应
message GetDictReply {
	DictV1 promDict = 1;
}

// ListDictRequest 获取字典列表请求
message ListDictRequest {
	// isDeleted 是否获取已删除的字典
	bool isDeleted = 1;
	// page 分页参数
	PageRequest page = 2;
	// keyword 关键字
	string keyword = 3 [(validate.rules).string = {max_len: 20}];
	// category 分类
	Category category = 4;
}
// ListDictReply 获取字典列表响应
message ListDictReply {
	// page 分页参数
	PageReply page = 1;
	// list 字典列表
	repeated DictV1 list = 2;
}

// SelectDictRequest 获取字典列表请求
message SelectDictRequest {
	// isDeleted 是否获取已删除的字典
	bool isDeleted = 1;
	// page 分页参数
	PageRequest page = 2;
	// keyword 关键字
	string keyword = 3 [(validate.rules).string = {max_len: 20}];
	// category 分类
	Category category = 4;
}
// SelectDictReply 获取字典列表响应
message SelectDictReply {
	// page 分页参数
	PageReply page = 1;
	// list 字典列表
	repeated DictSelectV1 list = 2;
}